# luxtts-onnx

./: .gitignore  NOTICE  README.md  pyproject.toml
scripts/: benchmark_onnx.py  export_vocos.py
src/luxtts_onnx/: __init__.py  exporter.py  inference.py  normalizer.py  tokenizer.py
