[project]
name = "luxtts-onnx"
version = "0.1.0"
description = "Lightweight ONNX-based TTS inference for LuxTTS -- no PyTorch required"
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"
authors = [{ name = "ProgCat", email = "progcat@protonmail.com" }]
keywords = ["tts", "onnx", "voice-cloning", "speech-synthesis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "onnxruntime>=1.17",
    "numpy>=1.26",
    "librosa>=0.10",
    "soundfile>=0.12",
    "pypinyin>=0.53",
    "jieba>=0.42",
    "piper-phonemize>=1.2",
    "huggingface-hub>=0.20",
    "cn2an>=0.5",
    "inflect>=7.0",
]

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu>=1.17",
    "nvidia-cudnn-cu12>=9.5",
    "nvidia-cublas-cu12>=12.4",
    "nvidia-cuda-runtime-cu12>=12.4",
    "nvidia-cufft-cu12>=11.2",
    "nvidia-cuda-nvrtc-cu12>=12.4",
]
export = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "safetensors>=0.4",
    "linacodec @ git+https://github.com/ysharma3501/LinaCodec.git",
    "vocos",
    "transformers>=4.40",
    "onnx>=1.17",
]

[project.urls]
Repository = "https://github.com/smolGura/luxtts-onnx"
Upstream = "https://github.com/ysharma3501/LuxTTS"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/luxtts_onnx"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
find-links = ["https://k2-fsa.github.io/icefall/piper_phonemize.html"]

[tool.ruff]
line-length = 100
